cft/sg.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "hello world Security Groups",
    "Resources": {
        "SGWEB": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Websecurity group.",
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "SourceSecurityGroupId": {
                            "Ref": "SGELB"
                        }
                    },
					{
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "SourceSecurityGroupId": {
                            "Ref": "SGELB"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "VpcId": {
                    "Ref": "VpcId"
                }
            }
        },
        "SGELB": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "ELB security group",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
					{
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                      {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }  
                ],
                "VpcId": {
                    "Ref": "VpcId"
                }
            }
        }
    },
    "Parameters": {
        "VpcId": {
            
            "Description": "ID of the VPC",
            "Type": "String"
        }
    },
	"Outputs" : {
  "SGELBID" : {
    "Description": "securitygroup id for seelb",  
     "Value" : { "Ref" : "SGELB" }
    
  },
  "SGWEBID" : {
    "Description": "SecurityGroup ID for web",  
     "Value" : { "Ref" : "SGWEB" }
    
  }
  }
}
